allow processing without siri result (only gtfs data)