@@ -1,5 +1,6 @@
 package org.hasadna.gtfs.service;
 
+import io.vavr.collection.*;
 import org.assertj.core.api.Assertions;
 import org.hasadna.gtfs.entity.StopData;
 import org.junit.Test;
@@ -7,10 +8,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
 
 public class ReadZipFileTest {
 
@@ -21,7 +18,7 @@ public class ReadZipFileTest {
         ReadZipFile rz = new ReadZipFile();
         Stream<String> lines = rz.readZipFile("/home/evyatar/logs/work/2019-03/gtfs/work 2019-03-20/gtfs2019-03-20.zip", "stops.txt");
 
-        List<String> first20Lines =  lines.skip(1).limit(20).collect(Collectors.toList());
+        List<String> first20Lines =  lines.drop(1).take(20).toList();
         first20Lines.forEach(line -> logger.info(line) );
     }
 
@@ -161,7 +158,7 @@ public class ReadZipFileTest {
 
     @Test
     public void test8() throws IOException {
-        IntStream.rangeClosed(1, 9).forEach(i ->
+        Stream.rangeClosed(1, 9).forEach(i ->
             {
                 String fileName = "/home/evyatar/logs/work/2019-04/gtfs/" + "gtfs2019-04-0" + i + ".zip";
                 io.vavr.collection.Stream<String> lines = (new ReadZipFile()).stopLinesFromFile(fileName);
@@ -181,7 +178,7 @@ public class ReadZipFileTest {
 
     @Test
     public void test9() throws IOException {
-        IntStream.rangeClosed(1, 9).forEach(i ->
+        Stream.rangeClosed(1, 9).forEach(i ->
         {
             String fileName = "/home/evyatar/logs/work/2019-04/gtfs/" + "gtfs2019-04-0" + i + ".zip";
             io.vavr.collection.Stream<String> lines = (new ReadZipFile()).stopLinesFromFile(fileName);
@@ -197,5 +194,148 @@ public class ReadZipFileTest {
             }
         });
 
+    }
+
+    @Test
+    public void test10a() {
+        ReadZipFile rzf = new ReadZipFile();
+        List<String> lines = rzf.stopTimesLinesOfTripsFromFile(
+                "/home/evyatar/logs/gtfs/gtfs2019-10-16.zip",
+                            List.of("41569051", "10021427")
+                                    .toSet());
+        Assertions.assertThat(lines.size()).isGreaterThan(0);
+    }
+
+    @Test
+    public void test10() {
+        String FILE_NAME_INSIDE_GTFS_ZIP = "stop_times.txt";
+        String fileFullPath = "/home/evyatar/logs/gtfs/gtfs2019-10-16.zip";
+        ReadZipFile rzf = new ReadZipFile();
+        List<String> lines = List.empty();
+        Set<String> tripIds = List.of("41569051", "10021427"
+                //"41568956", "41568957", "41568958", "41568959"//, "41569020", "41569011", "41569023", "41569002", "41569014"   //, 41568960, 41569026, 41568950, 41568961, 41569005, 41568951, 41568962, 41569017, 41568952, 41568963, 41568953, 41568964, 41569008, 41568954, 41568965, 41568955, 41568966, 41568999
+                ).toSet();
+        Set<String> tripsInThisFile = HashSet.empty();
+        int counter = 0 ;
+        try {
+            lines = rzf.readZipFile(fileFullPath, FILE_NAME_INSIDE_GTFS_ZIP)
+                    .filter(line -> lineBelongsToAnyTripId(tripIds, line)
+            ).toList();
+        } catch (Exception ex) {
+            logger.error("exception", ex);
+        }
+        Assertions.assertThat(lines.size()).isGreaterThan(0);
+    }
+
+    private int count = 0 ;
+    boolean lineBelongsToAnyTripId(final Set<String> tripIds, final String line) {
+        // this works fine, but is a bit slow
+        //return tripIds.stream().anyMatch(tripId -> line.startsWith(tripId + "_"));
+        // this saves a few seconds:
+        count ++;
+        if (count%1000000 == 0) logger.info("{}", count);
+        return tripIds.exists(id -> line.startsWith(id+"_"));
+        //return tripIds.stream().anyMatch(tripId -> line.startsWith(tripId + "_"));
+//        for (String tripId : tripIds) {
+//            if (
+//                    line.startsWith(tripId + "_") ||
+//                            (line.startsWith(tripId) && tripId.contains("_"))
+//            ) {
+//                return true;
+//            }
+//        }
+        // TODO check if following code improves performance:
+        //String lineStart = line.split("_")[0];
+        //return (tripIds.contains(lineStart));
+//        return false;
+    }
+
+    @Test
+    public void test11() throws IOException {
+//        String FILE_NAME_INSIDE_GTFS_ZIP = "stop_times.txt";
+//        String fileFullPath = "/home/evyatar/logs/gtfs/gtfs2019-10-16.zip";
+//        ReadZipFile rzf = new ReadZipFile();
+//        long count = 0 ;
+//        Map<String, List<Long>> map = HashMap.empty();
+//        Iterator<String> s = rzf.readZipFile(fileFullPath, FILE_NAME_INSIDE_GTFS_ZIP)
+//                .drop(1)
+//                //.take(1000000)
+//                .map(line -> line.substring(0, line.indexOf(",")))
+//                .iterator();
+//        while (s.hasNext()) {
+//            String tripId = s.next();
+//            map = map.put(tripId, map.getOrElse(tripId, List.empty()).append(count++));
+//            if (count%1000000 == 0) logger.info("{}", count);
+//        }
+// now I have map from tripId to list of all lines of that tripId
+        Map<String, List<Long>> map = generateMapOfTextLines();
+        logger.info("map size {}", map.keySet().size());
+//        logger.info("1st element: {} - {}", map.keySet().head(), map.getOrElse(map.keySet().head(), List.empty()) );
+//        List.of(1, 2, 3, 4, 5, 6,7 , 8, 9, 10, 11, 12, 13).forEach(index ->
+//            logger.info("{} element: {} - {}", index, map1.keySet().toList().get(index), map1.getOrElse(map1.keySet().toList().get(index), List.empty()) )
+//        );
+        List<String> trips = List.of("13094993_151019","13683405_151019","20492801_151019","12342967_151019","14291354_161019");
+        for (String tripId : trips) {
+            //logger.info("lines for tripId {}: {}", tripId, map1.get(tripId));
+            List<String> lines = getLinesOfTrip(tripId, map);
+            if (!lines.isEmpty()) {
+                logger.info("lines: ");
+                lines.forEach(line -> logger.info("{}", line));
+            }
+        }
+    }
+
+    private Map<String, List<Long>> generateMapOfTextLines() throws IOException {
+        String FILE_NAME_INSIDE_GTFS_ZIP = "stop_times.txt";
+        String fileFullPath = "/home/evyatar/logs/gtfs/gtfs2019-10-16.zip";
+        ReadZipFile rzf = new ReadZipFile();
+        long count = 0 ;
+        Map<String, List<Long>> map = HashMap.empty();
+        Iterator<String> s = rzf.readZipFile(fileFullPath, FILE_NAME_INSIDE_GTFS_ZIP)
+                .drop(1)
+                //.take(1000000)
+                .map(line -> line.substring(0, line.indexOf(",")))
+                .iterator();
+        while (s.hasNext()) {
+            String tripId = s.next();
+            map = map.put(tripId, map.getOrElse(tripId, List.empty()).append(count++));
+            if (count%1000000 == 0) logger.info("{}", count);
+        }
+        return map;
+    }
+
+    private List<String> getLinesOfTrip(String tripId, Map<String, List<Long>> map) throws IOException {
+        String FILE_NAME_INSIDE_GTFS_ZIP = "stop_times.txt";
+        String fileFullPath = "/home/evyatar/logs/gtfs/gtfs2019-10-16.zip";
+        ReadZipFile rzf = new ReadZipFile();
+
+        List<Long> list = map.getOrElse(tripId, List.empty()).sorted();
+        logger.info("list of lines for trip {}: {}", tripId, list);
+//        List<String> allLines = rzf.readZipFile(fileFullPath, FILE_NAME_INSIDE_GTFS_ZIP).drop(1).take(1000000).toList();
+//        logger.info("{}",allLines.get(220110));
+//        logger.info("{}",allLines.get(220111));
+//        logger.info("{}",allLines.get(220112));
+//        logger.info("{}",allLines.get(220113));
+//        if (false) return List.empty();
+        count = 0;
+        List<String> lines = List.empty();
+//        rzf = new ReadZipFile();
+        Iterator<String> iter = rzf.readZipFile(fileFullPath, FILE_NAME_INSIDE_GTFS_ZIP)
+                .drop(1)
+                .iterator();
+        while (iter.hasNext()) {
+            String line = iter.next();
+            if (list.head() == count) {
+                //logger.info("count {} line {}", count, line);
+                lines = lines.append(line);
+                list = list.tail();
+            }
+            if (list.isEmpty()) break;
+            count = count+1;
+        }
+//        logger.info("count={}", count);
+//        logger.info("lines: ");
+//        lines.forEach(line -> logger.info("{}", line));
+        return lines;
     }
 }
